# le_professeur_bizarre

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  run.py  style.css  test_app.py
le_professeur_bizarre/: __init__.py  behaviors.py  integrated_server.py  lessons.py  llm.py  main.py  realtime_app.py  server.py  vision.py
le_professeur_bizarre/static/: index.html  main.js  style.css
